--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.67MB/s(Youtube:不良林), server: shanghai-router1-892412-jp1.dukou.info, port: 6301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp1.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-944.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-5.59MB/s(Youtube:不良林), server: hk-route-12369-2.dukou.info, port: 8302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-2.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.06MB/s(Youtube:不良林), server: kr-cn-relay-1-452x4.dukou.info, port: 3301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: kr-cn-relay-1-452x4.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: 113.31.109.30, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-369.3KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-1018.9KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-1.23MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇩🇪 德国-1.04MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.49MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: 86032c4e-ec6e-4523-8c1f-8e7e4ebd0d60, sni: 67us01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.25MB/s(Youtube:不良林), server: sg-cn-hk-relay-3-dd4440.dukou.info, port: 9303, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-3-dd4440.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.03MB/s(Youtube:不良林), server: us-cn-hk-relay-4-bd5e54.dukou.info, port: 7304, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: us-cn-hk-relay-4-bd5e54.dukou.info, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.23MB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-16.77MB/s(Youtube:不良林), server: hk-route-12369-9.dukou.info, port: 8309, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-9.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.00MB/s(Youtube:不良林), server: kr-cn-relay-1-452x4.dukou.info, port: 3301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: kr-cn-relay-1-452x4.dukou.info, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.28MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-582.2KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇬🇧 英国-3.00MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.09MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-944.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-369.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1018.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-944.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-369.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1018.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-944.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-369.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1018.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-944.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-369.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1018.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-944.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-369.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1018.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-944.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-369.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1018.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-944.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-369.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1018.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
