--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.85MB/s(Youtube:不良林), server: shanghai-router1-892412-jp6.dukou.info, port: 6306, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp6.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-18.23MB/s(Youtube:不良林), server: sg-cn-hk-relay-4-40e978.dukou.info, port: 9304, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-4-40e978.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-14.16MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.53MB/s(Youtube:不良林), server: tw-cn-hk-relay-2-184a76.dukou.info, port: 5302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: tw-cn-hk-relay-2-184a76.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: 113.31.109.30, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-17.68MB/s(Youtube:不良林), server: hk-cnrelay-14-142345.dukou.info, port: 8314, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-cnrelay-14-142345.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-932.3KB/s(Youtube:不良林), server: ru02-cu-2240.dukou.info, port: 2302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: ru02-cu-2240.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.99MB/s(Youtube:不良林), server: kr-cn-relay-2-32v22.dukou.info, port: 3302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: kr-cn-relay-2-32v22.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.26MB/s(Youtube:不良林), server: shanghai-router1-892412-jp1.dukou.info, port: 6301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp1.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.30MB/s(Youtube:不良林), server: kr-cn-relay-1-452x4.dukou.info, port: 3301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: kr-cn-relay-1-452x4.dukou.info, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-3.03MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇭🇰 香港-582.2KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
